# netcom

./: .gitignore  Cargo.toml  Makefile  nextest.toml  pyproject.toml  readme.md  recap.md  rust-libp2p  описание
command-swarm/command-swarm/: Cargo.toml  README.md
command-swarm/command-swarm-example/: Cargo.toml  README.md
command-swarm/command-swarm-example/src/: main.rs
command-swarm/command-swarm-example/src/behaviours/: mod.rs
command-swarm/command-swarm/src/: command.rs  handlers.rs  lib.rs  macros.rs  swarm_loop.rs
nat-traversal-bin/: Cargo.toml  Dockerfile  test_relay_connection.sh
nat-traversal-bin/src/: node.rs  relay.rs  utils.rs
protocols/xauth/: Cargo.toml  DEV.md  coverage.md  lcov.info  por_extension.md  xauth_coverage_report.txt
protocols/xauth/src/: behaviours.rs  connection_data.rs  definitions.rs  events.rs  lib.rs  por.rs  tests.rs
protocols/xauth/tests/: behaviour_tests.rs  core_test_automatic_auth_does_not_start.rs  core_test_manual_auth_starts_ok.rs  simple_mutual_auth_test.rs  swarm_test.rs  test_serialization.rs
protocols/xstream/: Cargo.toml  DEV.md  STRICTNESS_ANALYSIS.md  coverage.md  improvement_plan.md  lcov.info  readme.md  test_coverage_report.md
protocols/xstream/coverage-report/: tarpaulin-report.html
protocols/xstream/examples/: README.md  basic_usage.rs  inbound_decision.rs
protocols/xstream/src/: behaviour.rs  error_handling.rs  events.rs  handler.rs  handshake.rs  header.rs  lib.rs  mod.rs  protocol.rs  types.rs  utils.rs  xstream.rs  xstream_error.rs  xstream_state.rs
protocols/xstream/src/tests/: close_read_quic_test.rs  close_read_test.rs  close_write_test.rs  connection_handler_comprehensive_tests.rs  connection_handler_events_tests.rs  connection_handler_init_tests.rs  connection_handler_outbound_tests.rs  connection_handler_substream_tests.rs  connection_reject_test.rs  decision_flow_test.rs  error_handling_tests.rs  inbound_upgrade_comprehensive_tests.rs  inbound_upgrade_simple_test.rs  inbound_upgrade_test.rs  mod.rs  pending_streams_coverage_tests.rs  pending_streams_edge_cases_tests.rs  pending_streams_unit_tests.rs  read_to_end_close_quic_test.rs  real_network_swarm_tests.rs  real_xstream_exchange_tests.rs  strict_boundary_tests.rs  strict_data_integrity_tests.rs  strict_echo_test.rs  strict_isolation_tests.rs  strict_test_utils.rs  utils_tests.rs  xstream_coverage_tests.rs  xstream_data_exchange_tests.rs  xstream_diagnostics_tests.rs  xstream_edge_tests.rs  xstream_error_comprehensive_tests.rs  xstream_error_coverage_tests.rs  xstream_error_handling_tests.rs  xstream_simple_exchange_tests.rs  xstream_state_tests.rs  xstream_tests.rs
pyxnetwork/: Cargo.toml  echo.py
pyxnetwork/examples/: interactive_node.py
pyxnetwork/p2p_network/: __init__.py
pyxnetwork/src/: events.rs  lib.rs  mod.rs  node.rs  types.rs  xstream.rs  xstream_types.rs
pyxnetwork/tests/: test_err_stream.py  test_xstream_complex.py
xnetwork/: Cargo.toml
xnetwork/.config/: nextest.toml
xnetwork/examples/: advanced_search_demo.rs
xnetwork/examples/cn/: Cargo.toml
xnetwork/examples/cn/src/: main.rs
xnetwork/examples/inter/: Cargo.toml
xnetwork/src/: behaviour.rs  commander.rs  commands.rs  connection_management.rs  events.rs  lib.rs  mod.rs  node.rs  node_builder.rs
xnetwork/src/xroutes/: behaviour.rs  commander.rs  commands.rs  events.rs  handler.rs  mod.rs  types.rs  xroute.rs
xnetwork/tests/: common.rs  mod.rs  test_advanced_find_peer.rs  test_connect_timeout.rs  test_connections.rs  test_connections_problematic.rs  test_diagnostic.rs  test_find_peer_addresses.rs  test_real_dht_functionality.rs  test_stream_timeout.rs  test_utils.rs
xnetwork/tests/bootstrap/: mod.rs  test_plan.md
xnetwork/tests/connectivity/: mod.rs  test_connect_timeout.rs  test_connection_quality.rs  test_connections_problematic.rs  test_plan.md
xnetwork/tests/core_connections/: mod.rs  test_connection_events.rs  test_connection_info.rs  test_connection_management.rs  test_plan.md
xnetwork/tests/discovery/: mod.rs  test_advanced_find_peer.rs  test_find_peer_addresses.rs  test_plan.md  test_real_dht_functionality.rs
xnetwork/tests/node_core/: mod.rs  test_basic_connections.rs  test_diagnostic.rs  test_listen_single_port.rs  test_network_state_initial.rs  test_node_creation.rs  test_node_lifecycle.rs  test_node_shutdown.rs  test_node_startup.rs  test_plan.md
xnetwork/tests/utils/: event_handlers.rs  mod.rs  node.rs
xnetwork/tests/xauth/: mod.rs  test_auth_events.rs  test_auth_integration.rs  test_auth_on_connection.rs  test_connection_diagnostics.rs  test_connection_tracking.rs  test_node_execution.rs  test_plan.md  test_por_validation.rs
xnetwork/tests/xstream/: mod.rs  test_plan.md  test_stream_timeout.rs
xnetwork2/: Cargo.toml  GOAL.md  README.md  design.md  plan.md  project.md
xnetwork2/examples/: autonat_server_client.rs  command_demo.rs  kad_mode_demo.rs  nat_traversal_demo.rs  test_autonat_server.rs  test_connection_tracker.rs  test_kad_mode.rs
xnetwork2/src/: commander.rs  connection_tracker.rs  connection_tracker_commands.rs  lib.rs  main_behaviour.rs  node.rs  node_builder.rs  node_events.rs  swarm_commands.rs  swarm_handler.rs
xnetwork2/src/behaviours/: mod.rs
xnetwork2/src/conntracker/: commands.rs  mod.rs  test_basic.rs
xnetwork2/tests/: add_external_address_test.rs  autonat_nat_detection_test.rs  dcutr_hole_punching_test.rs  get_external_addresses_test.rs  kad_mode_test.rs  kad_modes_test.rs  kad_relay_test.rs  kademlia_config_test.rs  kademlia_modes.rs  listen_dial_wait_test.rs  mdns_discovery.rs  mod.rs  nat_traversal_integration_test.rs  node_builder_test.rs  node_lifecycle_integration.rs  relay_test.rs  test_auto_auth.rs  test_dial_and_wait_connection_id.rs  two_nodes_connection.rs  two_nodes_xstream_data_transfer.rs  utils.rs  xauth_manual_mode.rs  xauth_mutual_authentication.rs  xauth_xstream_decision_flow.rs  xroutes_basic.rs  xroutes_integration.rs  xroutes_kad_discovery.rs  xroutes_simple.rs  xstream_decision_error_propagation.rs
xstream-tester/: Cargo.toml
xstream-tester/src/: main.rs
(+153 files in other folders)
