[package]
name = "p2p-network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.55", features = [
    "tokio", 
    "mdns", 
    "identify", 
    "kad", 
    "rendezvous", 
    "autonat", 
    "dcutr", 
    "request-response", 
    "quic", 
    "noise", 
    "yamux", 
    "dns", 
    "tcp", 
    "ping", 
    "cbor", 
    "serde", 
    "macros",
    "relay"
]}
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
serde_json = "1.0"
ed25519-dalek = "2.1.1"
rand = "0.9.1"