[tool.poetry]
name = "p2p-network"
version = "0.1.0"
description = "Python bindings for p2p-network Rust library"
authors = ["Your Name <your.email@example.com>"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.8"
maturin = "^1.0.0"

[build-system]
requires = ["maturin>=1.0.0"]
build-backend = "maturin"

