[package]
name = "nat-traversal-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
xnetwork2 = { path = "../xnetwork2" }
tokio = { version = "1.0", features = ["full"] }
libp2p = {  version = "0.56", features = ["quic", "dns", "relay", "kad"] }
base64 = "0.21"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"

[[bin]]
name = "relay"
path = "src/relay.rs"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "generate_env"
path = "src/generate_env.rs"
