[package]
name = "pyxnetwork"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyxnetwork"
crate-type = ["cdylib"]

[dependencies]
libp2p = {version = "0.56", path = "/home/solarw/hyperion/rust-libp2p/libp2p", features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'relay', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics']}

# PyO3 dependencies for Python bindings
pyo3 = { version = "^0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = [
    "async-channel",
    "tokio",
    "attributes",
    "tokio-runtime",
    "clap",
    "async-std",
    "async-std-runtime",
] }

# Tokio for async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"

# Dependencies for the network stack
xauth = { path = "/home/solarw/hyperion/netcom/protocols/xauth" }
xstream = { path = "/home/solarw/hyperion/netcom/protocols/xstream" }
xnetwork = { path = "/home/solarw/hyperion/netcom/xnetwork" }

# Additional utilities
futures = "0.3"

[package.metadata.maturin]
name = "pyxnetwork"
