[package]
name = "xnetwork2"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = {version = "0.56", path = "/home/solarw/hyperion/rust-libp2p/libp2p", features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics', 'tcp', 'yamux']}

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
libp2p-stream = { path = "/home/solarw/hyperion/rust-libp2p/protocols/stream"}
async-trait = "0.1"
paste = "1.0"

xauth = {path = "/home/solarw/hyperion/netcom/protocols/xauth"}
xstream = {path = "/home/solarw/hyperion/netcom/protocols/xstream"}
yamux = "0.13.5"

# Command-swarm integration
command-swarm = { path = "/home/solarw/hyperion/netcom/command-swarm/command-swarm" }

[dev-dependencies]
tracing-subscriber = "0.3.19"

[[bin]]
name = "xnetwork2"
path = "examples/command_demo.rs"
