[package]
name = "xnetwork2"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = {version = "0.56", features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics', 'tcp', 'yamux', 'relay']}

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1"
paste = "1.0"

xauth = {path = "../protocols/xauth"}
xstream = {path = "../protocols/xstream"}
yamux = "0.13.5"

# Command-swarm integration
command-swarm = { path = "../command-swarm/command-swarm" }

[dev-dependencies]
tracing-subscriber = "0.3.19"

[[bin]]
name = "xnetwork2"
path = "examples/command_demo.rs"
