[package]
name = "xstream-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
# Используйте точно такую же версию libp2p, как в xstream
libp2p = { version = "0.55", path = "/home/solarw/hyperion/rust-libp2p/libp2p", features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'relay', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics'] }

# Используйте тот же xstream
xstream = { path = "/home/solarw/hyperion/netcom/protocols/xstream" }

# Остальные зависимости
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.98"
rand = "0.9.1"