[package]
name = "command-swarm-example"
version = "0.1.0"
edition = "2024"

[dependencies]
command-swarm = { path = "../command-swarm" }
libp2p = {version = "0.56", features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'relay', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics', 'tcp', 'yamux', 'websocket']}

tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
paste = "1.0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
