[package]
name = "xauth"
version = "0.1.0"
edition = "2024"

[dependencies]

libp2p = {version = "0.56", path = "/home/solarw/hyperion/rust-libp2p/libp2p", features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'relay', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics']}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
libp2p-swarm = { version = "0.47", path = "/home/solarw/hyperion/rust-libp2p/swarm" }
libp2p-swarm-test = { version = "0.6", path = "/home/solarw/hyperion/rust-libp2p/swarm-test" }
serde_cbor = "0.11"

[lib]


# PyO3 dependencies for Python bindings
