[package]
name = "xauth"
version = "0.1.0"
edition = "2024"

[dependencies]

libp2p = {version = "0.56", features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'relay', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics']}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
libp2p-swarm ="0.47"
libp2p-swarm-test = "0.6"
serde_cbor = "0.11"

[lib]


# PyO3 dependencies for Python bindings
