[package]
name = "xstream"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = {version = "0.56",features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'relay', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics']}

tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
tracing = "0.1"
byteorder = "1.5.0"

[dev-dependencies]
libp2p-swarm-test = { version = "0.6", features = ['tokio']}

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "inbound_decision"
path = "examples/inbound_decision.rs"
