[package]
name = "inter"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = {version = "0.55", path = "/home/solarw/hyperion/rust-libp2p/libp2p", features = ['quic', 'dns', 'noise', 'autonat', 'dcutr', 'relay', 'mdns', 'kad', 'identify', 'ping', 'rendezvous', 'request-response', 'cbor', 'serde', 'macros', 'tokio', 'metrics']}

tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ctrlc = "3.4"
serde_json = "1.0"
ed25519-dalek = "2.1.1"
rand = "0.9.1"
void = "1.0.2"
libp2p-stream = { path = "/home/solarw/hyperion/rust-libp2p/protocols/stream"}

anyhow = "1.0.98"
byteorder = "1.5.0"


tracing = "0.1"
xauth = { path = "/home/solarw/hyperion/netcom/protocols/xauth" }
xstream = { path = "/home/solarw/hyperion/netcom/protocols/xstream" }
xnetwork = { path = "/home/solarw/hyperion/netcom/xnetwork" }
